# bioxai-hackathon

./: README.md  api.py  concepts.py  download_disulfide_data.py  download_structures.py  extract_concept_vector.py  extract_features.py  inference.py  main.py  modal_app.py  pyproject.toml  validate_concept_vector.py
val/: binding.txt  disorder.txt  ppi.txt  ptm.txt  sasa.txt  ss_helix.txt  ss_helix_sheet.txt  ss_sheet.txt
web/: index.html
web/src/: App.tsx  ProteinViewer.tsx  index.css  pdbParser.ts
